@@ -10,12 +10,12 @@
 #include "GaudiKernel/DeclareFactoryEntries.h"
 
 DECLARE_TOOL_FACTORY(TrigT1CaloCpmMonTool )
-DECLARE_TOOL_FACTORY(TriggerTowerMon);
-DECLARE_TOOL_FACTORY(JetElementMon);
-DECLARE_TOOL_FACTORY(JEMMon);
-DECLARE_TOOL_FACTORY(CMMMon);
-DECLARE_TOOL_FACTORY(SimBSMon);
-DECLARE_TOOL_FACTORY(CaloTTMon);
+DECLARE_TOOL_FACTORY(TriggerTowerMon)
+DECLARE_TOOL_FACTORY(JetElementMon)
+DECLARE_TOOL_FACTORY(JEMMon)
+DECLARE_TOOL_FACTORY(CMMMon)
+DECLARE_TOOL_FACTORY(SimBSMon)
+DECLARE_TOOL_FACTORY(CaloTTMon)
 
 
 DECLARE_FACTORY_ENTRIES(TrigT1CaloMonitoring) {
